--- a/Student-AdvancedAnimation/Lab829 Vectors/test-vectors.html
+++ b/Student-AdvancedAnimation/Lab829 Vectors/test-vectors.html
@@ -9,28 +9,32 @@
   <body style = "white-space:pre">
     <script>
         var vec = new JSVector();   // no args
-        var text = "no args " + vec + "\n";
-        vec = new JSVector(2,3);   // constructor with 2 args
-        text += "2 args " + vec + "\n";
-        text += "normalize " + vec.normalize() + "\n";
-        text += "set magnitude " + vec.setMagnitude(Math.SQRT2) + "\n";
-        text += "get magnitude " + vec.getMagnitude().toFixed(2) + "\n";
-        text += "set direction " + vec.setDirection(Math.PI/4) + "\n";
-        text += "get direction " + (vec.getDirection()*180/Math.PI).toFixed(2) + "\n";
-        text += "rotate clockwise " + vec.rotate(Math.PI/4) + "\n";
-        text += "rotate counterclockwise " + vec.rotate(-Math.PI/4) + "\n";
-        text += "add " + vec.add(new JSVector(4,5)) + "\n";
-        text += "sub " + vec.sub(new JSVector(4,5)) + "\n";
-        text += "multiply " + vec.multiply(2.5) + "\n";
-        text += "divide " + vec.divide(2.5) + "\n";
-        text += "addGetNew " + JSVector.addGetNew(vec,vec) + "\n";
-        text += "subGetNew " + JSVector.subGetNew(vec,vec) + "\n";
-        text += "distance " + vec.distance(new JSVector(2,2)).toFixed(2) + "\n";
-        text += "distanceSquared " + vec.distanceSquared(new JSVector(2,2)).toFixed(2) + "\n";
-        text += "angleBetween " + (vec.angleBetween(new JSVector(0,1))*180/Math.PI).toFixed(2) + "\n";
-        text += "angleBetween " + (vec.angleBetween(new JSVector(0,-1))*180/Math.PI).toFixed(2) + "\n";
-        text += "limit "+ vec.limit(1) + "\n";
-        text += "copy "+ vec.copy() + "\n";
+        //var text = "no args " + vec + "\n";
+        vec = new JSVector(2,3); // constructor with 2 args
+        var text =   
+        // text += "2 args " + vec + "\n";
+        // text += "normalize " + vec.normalize() + "\n";
+        // text += "set magnitude " + vec.setMagnitude(Math.SQRT2) + "\n";
+        // text += "get magnitude " + vec.getMagnitude().toFixed(2) + "\n";
+        // text += "set direction " + vec.setDirection(Math.PI/4) + "\n";
+        // text += "get direction " + (vec.getDirection()*180/Math.PI).toFixed(2) + "\n";
+        // text += "rotate clockwise " + vec.rotate(Math.PI/4) + "\n";
+        // text += "rotate counterclockwise " + vec.rotate(-Math.PI/4) + "\n";
+        // text += "add " + vec.add(new JSVector(4,5)) + "\n";
+        // text += "sub " + vec.sub(new JSVector(4,5)) + "\n";
+        // text += "multiply " + vec.multiply(2.5) + "\n";
+        // text += "divide " + vec.divide(2.5) + "\n";
+        // text += "addGetNew " + JSVector.addGetNew(vec,vec) + "\n";
+        // text += "subGetNew " + JSVector.subGetNew(vec,vec) + "\n";
+        //text += "distance " +'
+        //toFixed(2) + "\n";
+        //var distance=vec.distance(new JSVector(2,2));
+        //text+=distance.toFixed(2);
+        //text += "distanceSquared " + vec.distanceSquared(new JSVector(2,2)).toFixed(2) + "\n";
+        // text += "angleBetween " + (vec.angleBetween(new JSVector(0,1))*180/Math.PI).toFixed(2) + "\n";
+        // text += "angleBetween " + (vec.angleBetween(new JSVector(0,-1))*180/Math.PI).toFixed(2) + "\n";
+        // text += "limit "+ vec.limit(1) + "\n";
+        // text += "copy "+ vec.copy() + "\n";
 
         document.body.textContent = text;
 
